--- a/Resources/administration/src/app/component/form/sw-price-field/sw-price-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-price-field/sw-price-field.html.twig
@@ -4,7 +4,7 @@
         {% block sw_price_field_gross %}
             <sw-field type="number"
                       name="priceGross"
-                      label="Preis (Brutto)"
+                      :label="$tc('global.sw-price-field.labelPriceGross')"
                       :suffix="currency.symbol"
                       min="0.00"
                       step="0.01"
@@ -26,7 +26,7 @@
         {% block sw_price_field_net %}
             <sw-field type="number"
                       name="priceNet"
-                      label="Preis (Netto)"
+                      :label="$tc('global.sw-price-field.labelPriceNet')"
                       :suffix="currency.symbol"
                       min="0.00"
                       step="0.01"
