--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
@@ -15,13 +15,13 @@
 
                         {% block sw_admin_menu_header_shop_name %}
                             <h1 class="sw-admin-menu__header-shop-name">
-                                Admin Prototype
+                                {{ $tc('global.sw-admin-menu.textProjectName') }}
                             </h1>
                         {% endblock %}
 
                         {% block sw_admin_menu_header_shop_version %}
                             <div class="sw-admin-menu__header-shop-version">
-                                Shopware Administration
+                                {{ $tc('global.sw-admin-menu.textShopwareAdmin') }}
                             </div>
                         {% endblock %}
 
@@ -75,7 +75,7 @@
                         {% endblock %}
 
                         {% block sw_admin_menu_toggle_sidebar_text %}
-                            <span class="collapsible-text">Menü minimieren</span>
+                            <span class="collapsible-text">{{ $tc('global.sw-admin-menu.linkMinimizeMenu') }}</span>
                         {% endblock %}
 
                     </button>
@@ -120,17 +120,30 @@
                             <ul class="sw-admin-menu__navigation-list">
 
                                 {% block sw_admin_menu_user_actions_items %}
-                                    <li class="sw-admin-menu__navigation-list-item">
-                                        <a href="#" class="sw-admin-menu__navigation-link" @click.prevent="onLogoutUser">
-                                            <sw-icon class="sw-admin-menu__navigation-link-icon"
-                                                     name="default-action-log-out"
-                                                     small>
-                                            </sw-icon>
-                                            Logout
-                                        </a>
-                                    </li>
-                                {% endblock %}
 
+                                    {% block sw_admin_menu_user_actions_items_change_language %}
+                                        <li class="sw-admin-menu__navigation-list-item">
+                                            <a href="#" class="sw-admin-menu__navigation-link" @click.prevent="onChangeLanguage">
+                                                <sw-icon class="sw-admin-menu__navigation-link-icon"
+                                                         name="default-location-flag"
+                                                         small></sw-icon>
+                                                {{ $tc('global.sw-admin-menu.linkChangeLanguage') }}
+                                            </a>
+                                        </li>
+                                    {% endblock %}
+
+                                    {% block sw_admin_menu_user_actions_items_logout_user %}
+                                        <li class="sw-admin-menu__navigation-list-item">
+                                            <a href="#" class="sw-admin-menu__navigation-link" @click.prevent="onLogoutUser">
+                                                <sw-icon class="sw-admin-menu__navigation-link-icon"
+                                                         name="default-action-log-out"
+                                                         small>
+                                                </sw-icon>
+                                                {{ $tc('global.sw-admin-menu.linkLogout') }}
+                                            </a>
+                                        </li>
+                                    {% endblock %}
+                                {% endblock %}
                             </ul>
                         {% endblock %}
 
@@ -145,7 +158,7 @@
 
                     {% block sw_admin_menu_flyout_label %}
                         <div class="sw-admin-menu__flyout-label">
-                            {{ flyoutLabel }}
+                            {{ $tc(flyoutLabel) }}
                         </div>
                     {% endblock %}
 
