--- a/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
@@ -3,18 +3,18 @@
 
         {% block sw_product_basic_form_title_field %}
             <sw-field type="text"
-                      label="Titel"
+                      :label="$tc('sw-product.basicForm.labelTitle')"
+                      :placeholder="$tc('sw-product.basicForm.placeholderTitle')"
                       name="title"
-                      placeholder="Your product title..."
                       v-model="product.name">
             </sw-field>
         {% endblock %}
 
         {% block sw_product_basic_form_description_field %}
             <sw-field type="textarea"
-                      label="Artikel-Beschreibung"
+                      :label="$tc('sw-product.basicForm.labelDescription')"
+                      :placeholder="$tc('sw-product.basicForm.placeholderDescription')"
                       name="descriptionLong"
-                      placeholder="Your product description..."
                       v-model="product.descriptionLong">
             </sw-field>
         {% endblock %}
@@ -22,18 +22,18 @@
         <sw-container grid="1fr 1fr" gap="30px">
             {% block sw_product_basic_form_id_field %}
                 <sw-field type="text"
-                          label="Artikelnummer"
+                          :label="$tc('sw-product.basicForm.labelProductNumber')"
+                          :placeholder="$tc('sw-product.basicForm.placeholderProductNumber')"
                           name="id"
-                          placeholder="Your product Id"
                           :value="product.id">
                 </sw-field>
             {% endblock %}
 
             {% block sw_product_basic_form_manufacturer_field %}
                 <sw-field type="select"
-                          label="Hersteller"
+                          :label="$tc('sw-product.basicForm.labelManufacturer')"
+                          :placeholder="$tc('sw-product.basicForm.placeholderManufacturer')"
                           name="manufacturer"
-                          placeholder="Your product manufacturer"
                           v-model="product.manufacturerId">
                     {% block sw_product_basic_form_manufacturer_field_options %}
                         <option slot="options" v-for="manufacturer in manufacturers" :value="manufacturer.id">{{ manufacturer.name }}</option>
