--- a/Resources/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-price-form/sw-product-price-form.html.twig
@@ -4,9 +4,9 @@
         <sw-container grid="1fr 1fr" gap="30px">
             {% block sw_product_price_form_tax_field %}
                 <sw-field type="select"
-                          label="Steuersatz"
+                          :label="$tc('sw-product.priceForm.labelTaxRate')"
+                          :placeholder="$tc('sw-product.priceForm.placeholderTaxRate')"
                           name="tax"
-                          placeholder="Tax rate"
                           v-model="product.taxId">
                     {% block sw_product_price_form_tax_field_options %}
                         <option slot="options" v-for="tax in taxRates" :value="tax.id">{{ tax.name }}</option>
@@ -16,10 +16,10 @@
 
             {% block sw_product_price_form_purchase_price_field %}
                 <sw-field type="number"
-                          label="Einkaufspreis (Brutto)"
+                          :label="$tc('sw-product.priceForm.labelPriceGross')"
+                          :placeholder="$tc('sw-product.priceForm.placeholderPriceGross')"
                           name="purchasePrice"
                           suffix="EUR"
-                          placeholder="Purchase price..."
                           min="0.00"
                           step="0.01"
                           v-model="product.purchasePrice">
@@ -35,19 +35,19 @@
 
             {% block sw_product_price_form_unit_field %}
                 <sw-field type="select"
-                          label="Maßeinheit"
-                          placeholder="Wählen..."
+                          :label="$tc('sw-product.priceForm.labelUnit')"
+                          :placeholder="$tc('sw-product.priceForm.placeholderUnit')"
                           v-model="product.unitId">
-                    <option slot="options" :value="1">Liter</option>
-                    <option slot="options" :value="2">Kg</option>
-                    <option slot="options" :value="3">Meter</option>
+                    <option slot="options" :value="1">{{ $tc('sw-product.priceForm.optionLitre') }}</option>
+                    <option slot="options" :value="2">{{ $tc('sw-product.priceForm.optionKilogram') }}</option>
+                    <option slot="options" :value="3">{{ $tc('sw-product.priceForm.optionMetre') }}</option>
                 </sw-field>
             {% endblock %}
 
             {% block sw_product_price_form_purchase_unit_field %}
                 <sw-field type="number"
-                          label="Inhalt"
-                          placeholder="Inhalt"
+                          :label="$tc('sw-product.priceForm.labelPurchaseUnit')"
+                          :placeholder="$tc('sw-product.priceForm.placeholderPurchaseUnit')"
                           min="0.00"
                           step="0.01"
                           v-model="product.purchaseUnit">
@@ -56,8 +56,8 @@
 
             {% block sw_product_price_form_reference_unit_field %}
                 <sw-field type="number"
-                          label="Grundeinheit"
-                          placeholder="Grundeinheit"
+                          :label="$tc('sw-product.priceForm.labelReferenceUnit')"
+                          :placeholder="$tc('sw-product.priceForm.placeholderReferenceUnit')"
                           min="0.00"
                           step="0.01"
                           v-model="product.referenceUnit">
@@ -66,8 +66,8 @@
 
             {% block sw_product_price_form_pack_unit_field %}
                 <sw-field type="text"
-                          label="Verpackungseinheit"
-                          placeholder="Karton, Flasche, ..."
+                          :label="$tc('sw-product.priceForm.labelPackUnit')"
+                          :placeholder="$tc('sw-product.priceForm.placeholderPackUnit')"
                           v-model="product.packUnit">
                 </sw-field>
             {% endblock %}
