--- a/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
@@ -4,18 +4,22 @@
         {% block sw_product_detail_header %}
             <template slot="smart-bar-header">
                 <h2 v-if="product.name">{{ product.name }}</h2>
-                <h2 v-else>New product</h2>
+                <h2 v-else>{{ $tc('sw-product.detail.textHeadline') }}</h2>
             </template>
         {% endblock %}
 
         {% block sw_product_detail_actions %}
             <template slot="smart-bar-actions">
                 {% block sw_product_detail_actions_abort %}
-                    <sw-button :disabled="isLoading" link="sw.product.index">Abbrechen</sw-button>
+                    <sw-button :disabled="isLoading" link="sw.product.index">
+                        {{ $tc('sw-product.detail.buttonCancel') }}
+                    </sw-button>
                 {% endblock %}
 
                 {% block sw_product_detail_actions_save %}
-                    <sw-button variant="primary" :disabled="isLoading" @click.prevent="onSave">Speichern</sw-button>
+                    <sw-button variant="primary" :disabled="isLoading" @click.prevent="onSave">
+                        {{ $tc('sw-product.detail.buttonSave') }}
+                    </sw-button>
                 {% endblock %}
             </template>
         {% endblock %}
@@ -24,8 +28,14 @@
             <sw-card-view slot="content">
                 {% block sw_product_detail_content_tabs %}
                     <sw-tabs class="sw-product-detail-page__tabs">
-                        <sw-tabs-item :route="{ name: 'sw.product.detail.base', params: { id: $route.params.id } }" title="Allgemein">Allgemein</sw-tabs-item>
-                        <sw-tabs-item :route="{ name: 'sw.product.detail.prices', params: { id: $route.params.id } }" title="Erweiterte Preise">Erweiterte Preise</sw-tabs-item>
+                        <sw-tabs-item :route="{ name: 'sw.product.detail.base', params: { id: $route.params.id } }"
+                                      :title="$tc('sw-product.detail.tabGeneral')">
+                            {{ $tc('sw-product.detail.tabGeneral') }}
+                        </sw-tabs-item>
+                        <sw-tabs-item :route="{ name: 'sw.product.detail.prices', params: { id: $route.params.id } }"
+                                      :title="$tc('sw-product.detail.tabAdvancedPrices')">
+                            {{ $tc('sw-product.detail.tabAdvancedPrices') }}
+                        </sw-tabs-item>
                     </sw-tabs>
                 {% endblock %}
 
