--- a/Resources/administration/src/module/sw-product/view/sw-product-detail-context-prices/sw-product-detail-context-prices.html.twig
+++ b/Resources/administration/src/module/sw-product/view/sw-product-detail-context-prices/sw-product-detail-context-prices.html.twig
@@ -8,7 +8,7 @@
         {% endblock %}
 
         {% block sw_product_detail_prices_price_card %}
-            <sw-card :title="priceGroup.contextRule ? priceGroup.contextRule.name : 'Neue Preisregel'"
+            <sw-card :title="priceGroup.contextRule ? priceGroup.contextRule.name : $tc('sw-product.contextPrices.cardTitlePriceRule')"
                      v-for="priceGroup in contextPriceGroups"
                      :key="priceGroup.contextRuleId"
                      class="context-price"
@@ -20,7 +20,7 @@
 
                         {% block sw_product_detail_prices_price_card_rule_selection %}
                             <sw-field type="select"
-                                      placeholder="Bitte wählen ..."
+                                      placeholder="$tc('sw-product.contextPrices.placeholderContextRule')"
                                       validation="required"
                                       :value="priceGroup.contextRuleId"
                                       @change="onContextRuleChange($event, priceGroup.contextRuleId)">
@@ -36,13 +36,13 @@
 
                         {% block sw_product_detail_prices_price_card_action_delete %}
                             <sw-button @click="onPriceGroupDelete(priceGroup.contextRuleId)">
-                                <sw-icon name="small-default-x-line-medium" size="20"></sw-icon>Preisregel löschen
+                                <sw-icon name="small-default-x-line-medium" size="20"></sw-icon>{{ $tc('sw-product.contextPrices.buttonPriceRuleDelete') }}
                             </sw-button>
                         {% endblock %}
 
                         {% block sw_product_detail_prices_price_card_action_duplicate %}
                             <sw-button @click="onPriceGroupDuplicate(priceGroup)" :disabled="priceGroup.contextRuleId === null">
-                                <sw-icon name="small-copy" size="20"></sw-icon>Preisregel duplizieren
+                                <sw-icon name="small-copy" size="20"></sw-icon>{{ $tc('sw-product.contextPrices.buttonPriceRuleDuplicate') }}
                             </sw-button>
                         {% endblock %}
 
@@ -50,7 +50,7 @@
                             <sw-context-button :menuOffsetLeft="0">
                                 {% block sw_product_detail_prices_price_card_action_currency_button %}
                                     <sw-button slot="button" :disabled="priceGroup.contextRuleId === null">
-                                        <sw-icon name="default-basic-plus-circle" size="20"></sw-icon>Währung hinzufügen
+                                        <sw-icon name="default-basic-plus-circle" size="20"></sw-icon>{{ $tc('sw-product.contextPrices.buttonPriceRuleCurrencyAdd') }}
                                     </sw-button>
                                 {% endblock %}
 
@@ -61,7 +61,7 @@
                                                           @click="onAddCurrency(priceGroup.contextRuleId, currency)">
                                         <span slot="icon" class="currency-symbol">{{ currency.symbol }}</span>
                                         {{ currency.name }}
-                                        {{ (currency.isDefault) ? '(Standard)' : '' }}
+                                        {{ (currency.isDefault) ? $tc('sw-product.contextPrices.textCurrencyDefault') : '' }}
                                     </sw-context-menu-item>
                                 {% endblock %}
                             </sw-context-button>
@@ -74,7 +74,7 @@
 
                         {% block sw_product_detail_prices_price_matrix_title %}
                             <h3 v-if="currencyRule.currency">
-                                Preisregeln für Währung: {{ currencyRule.currency.name }} {{ (currencyRule.currency.isDefault) ? '(Standard)' : '' }}
+                                {{ $tc('sw-product.contextPrices.textPriceRuleForCurrency') }}: {{ currencyRule.currency.name }} {{ (currencyRule.currency.isDefault) ? $tc('sw-product.contextPrices.textCurrencyDefault') : '' }}
                             </h3>
                         {% endblock %}
 
@@ -86,7 +86,7 @@
                                         {% block sw_product_detail_prices_price_matrix_grid_quantity_start %}
                                             <sw-grid-column flex="1"
                                                             align="stretch"
-                                                            label="Menge von">
+                                                            :label="$tc('sw-product.contextPrices.columnQuantityStart')">
                                                 <sw-field type="number"
                                                           validation="required"
                                                           v-model="item.quantityStart">
@@ -95,18 +95,22 @@
                                         {% endblock %}
 
                                         {% block sw_product_detail_prices_price_matrix_grid_quantity_end %}
-                                            <sw-grid-column flex="1" align="stretch" label="Menge bis">
+                                            <sw-grid-column flex="1"
+                                                            align="stretch"
+                                                            :label="$tc('sw-product.contextPrices.columnQuantityEnd')">
                                                 <sw-field type="number"
                                                           v-model="item.quantityEnd"
                                                           :validation="item.quantityEnd === null || item.quantityEnd > item.quantityStart"
                                                           @change="onQuantityEndChange($event, item, priceGroup)"
-                                                          placeholder="unendlich">
+                                                          :placeholder="$tc('sw-product.contextPrices.placeholderQuantityEnd')">
                                                 </sw-field>
                                             </sw-grid-column>
                                         {% endblock %}
 
                                         {% block sw_product_detail_prices_price_matrix_grid_price %}
-                                            <sw-grid-column flex="2" align="stretch" label="Preis (Brutto / Netto)">
+                                            <sw-grid-column flex="2"
+                                                            align="stretch"
+                                                            :label="$tc('sw-product.contextPrices.columnPrice')">
                                                 <sw-price-field :price="item.price"
                                                                 :taxRate="productTaxRate"
                                                                 :currency="currencyRule.currency"
@@ -120,7 +124,9 @@
                                                 {% block sw_product_detail_prices_price_matrix_grid_actions_button %}
                                                     <sw-context-button>
                                                         {% block sw_product_detail_prices_price_matrix_grid_actions_duplicate %}
-                                                            <sw-context-menu-item icon="small-copy" @click="onPriceRuleDuplicate(item)">Duplizieren</sw-context-menu-item>
+                                                            <sw-context-menu-item icon="small-copy" @click="onPriceRuleDuplicate(item)">
+                                                                {{ $tc('sw-product.contextPrices.contextMenuDuplicate') }}
+                                                            </sw-context-menu-item>
                                                         {% endblock %}
 
                                                         {% block sw_product_detail_prices_price_matrix_grid_actions_delete %}
@@ -128,7 +134,9 @@
                                                                               @click="onPriceRuleDelete(item)"
                                                                               :disabled="currencyRule.currency.isDefault &&
                                                                                          currencyRule.prices.length <= 1 &&
-                                                                                         Object.keys(priceGroup.currencies).length > 1">Löschen</sw-context-menu-item>
+                                                                                         Object.keys(priceGroup.currencies).length > 1">
+                                                            {{ $tc('sw-product.contextPrices.contextMenuDelete') }}
+                                                        </sw-context-menu-item>
                                                         {% endblock %}
                                                     </sw-context-button>
                                                 {% endblock %}
@@ -146,7 +154,9 @@
         {% block sw_product_detail_prices_actions %}
             <div class="context-prices__actions" v-if="!isLoading">
                 {% block sw_product_detail_prices_actions_add_button %}
-                    <sw-button @click="onAddNewPriceGroup">Weitere Preisregel hinzufügen</sw-button>
+                    <sw-button @click="onAddNewPriceGroup">
+                        {{ $tc('sw-product.contextPrices.buttonCreateAdditionalPriceRule') }}
+                    </sw-button>
                 {% endblock %}
             </div>
         {% endblock %}
